--- a/templates/list-orders.html
+++ b/templates/list-orders.html
@@ -82,7 +82,7 @@
         data: {
           "csrfmiddlewaretoken": $("[name=csrfmiddlewaretoken]").val(),
           "new_status": $('#ostatus').val(),
-          "courier-info": $("#courier-data").val(),
+          "courier-info": $("#courierdata").val(),
           "order_id": currid
         },
         dataType: "json",
