--- a/templates/list-orders.html
+++ b/templates/list-orders.html
@@ -52,7 +52,7 @@
   }
 
   function submitform() {
-    if ($("#ostatus").val != "dispatched") {
+    if ($("#ostatus").val() != "dispatched") {
       $.ajax({
         type: "POST",
         url: 'https://dashboard.manxho.co.in/api/edit_order_status/',
