--- a/templates/list-orders.html
+++ b/templates/list-orders.html
@@ -34,6 +34,15 @@
         var deliveryPrice = data.shippingPrice;
         currid = id;
         $("#ostatus").val(data.status);
+
+        if (data.status != "dispatched"){
+          $("#courier").hide();
+        }
+        else {
+          $("#courierdata").val(data.courierInfo);
+          $("#courier").show();
+        }
+
         // Create table rows
         var row = "<tr><td>Name:</td><td> " + name + "</td></tr><tr><td>Phone: </td><td> " +
           phone + "</td></tr><tr><td>Email: </td><td> " + email + "</td></tr><tr><td>OrderId: </td><td> " + orderId + "</td></tr><b>";
