--- a/templates/list-upi.html
+++ b/templates/list-upi.html
@@ -26,7 +26,7 @@
         var phone = data.shippingAddress.phone_number;
         var email = user.email;
         // Get order info
-        var orderId = data.custom_order_id;
+        var orderId = id;
         var orderItems = data.orderItems;
         var price = data.totalPrice;
         var deliveryPrice = data.shippingPrice; 
