--- a/templates/list-orders.html
+++ b/templates/list-orders.html
@@ -61,7 +61,7 @@
   }
 
   function submitform() {
-    if !($("#ostatus").val() == "dispatched" || $("#ostatus").val() == "cancelled") {
+    if ($("#ostatus").val() == "dispatched" || $("#ostatus").val() == "cancelled")! {
       $.ajax({
         type: "POST",
         url: 'https://dashboard.manxho.co.in/api/edit_order_status/',
