--- a/templates/list-orders.html
+++ b/templates/list-orders.html
@@ -28,7 +28,7 @@
         var phone = data.shippingAddress.phone_number;
         var email = user.email;
         // Get order info
-        var orderId = data.id;
+        var orderId = data._id;
         var orderItems = data.orderItems;
         var price = data.totalPrice;
         var deliveryPrice = data.shippingPrice;
