--- a/templates/list-upi.html
+++ b/templates/list-upi.html
@@ -129,7 +129,7 @@
         <th>Order ID</th>
         <th>Date</th>
         <th>Customer</th>
-
+        <th>Customer Contact Info</th>
         <th>Status</th>
         <th>Total Price</th>
         <th></th>
@@ -142,7 +142,7 @@
         <td>{{ item|pk }}</td>
         <td>{{ item.created_at }}</td>
         <td>{{ item.user.first_name }} {{ item.user.last_name }}</td>
-
+        <td>Phone: {{ item.shippingaddress.phone_number }}, City: {{ item.shippingaddress.phone_number }}, State: {{ item.shippingaddress.state }}</td>
 
         <td>UPI Unconfirmed</td>
         <td>{{ item.totalPrice }}</td>
