--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <title>Manxho Dashboard</title>
+  <title>Pureseed Dashboard</title>
   <!-- Tell the browser to be responsive to screen width -->
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -22,7 +22,7 @@
 <div class="login-box">
   <div class="login-logo">
     <a href="#">
-    <span class="brand-text font-weight-light">Manxho Dashboard</span></a>
+    <span class="brand-text font-weight-light">Pureseed Dashboard</span></a>
   </div>
   <!-- /.login-logo -->
   <div class="card">
