--- a/templates/base-xyno.html
+++ b/templates/base-xyno.html
@@ -50,8 +50,8 @@
   <aside class="main-sidebar sidebar-dark-primary elevation-4">
     <!-- Brand Logo -->
     <a href="#" class="brand-link">
-      <img src="https://shop.manxho.co.in/static/media/logo.a13da29e0076c16ed226.png" alt="manxho" class="brand-image img-circle elevation-3" style="opacity: .8">
-      <span class="brand-text font-weight-light">Manxho Dashboard</span>
+      <img src="https://shop.pureseed.in/static/media/logo.a13da29e0076c16ed226.png" alt="pureseed" class="brand-image img-circle elevation-3" style="opacity: .8">
+      <span class="brand-text font-weight-light">Pureseed Dashboard</span>
     </a>
 
     <!-- Sidebar -->
