--- a/templates/base.html
+++ b/templates/base.html
@@ -6,7 +6,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale={% if scale %}{{ scale }}{% else %}1{% endif %}">
   <meta http-equiv="x-ua-compatible" content="ie=edge">
-  <link rel="shortcut icon" href="https://shop.manxho.co.in/static/media/logo.a13da29e0076c16ed226.png">
+  <link rel="shortcut icon" href="https://shop.pureseed.in/static/media/logo.a13da29e0076c16ed226.png">
   <meta name="vapid-key" content="{{ vapid_key }}">
   {% if user.id %}
       <meta name="user_id" content="{{ user.id }}">
