--- a/templates/list-orders.html
+++ b/templates/list-orders.html
@@ -14,7 +14,7 @@
   function showmodal(id) {
     $.ajax({
       type: "GET",
-      url: `https://dashboard.manxho.co.in/api/users/order/${id}/`,
+      url: `https://dashboard.pureseed.in/api/users/order/${id}/`,
       xhrFields: {
         withCredentials: true
       },
@@ -64,7 +64,7 @@
     if (!($("#ostatus").val() == "dispatched" || $("#ostatus").val() == "cancelled")) {
       $.ajax({
         type: "POST",
-        url: 'https://dashboard.manxho.co.in/api/edit_order_status/',
+        url: 'https://dashboard.pureseed.in/api/edit_order_status/',
         headers: {
           "X-CSRFToken": jQuery("[name=csrfmiddlewaretoken]").val(),
         },
@@ -84,7 +84,7 @@
     else {
       $.ajax({
         type: "POST",
-        url: 'https://dashboard.manxho.co.in/api/edit_order_status/',
+        url: 'https://dashboard.pureseed.in/api/edit_order_status/',
         headers: {
           "X-CSRFToken": jQuery("[name=csrfmiddlewaretoken]").val(),
         },
