--- a/templates/base-xyno.html
+++ b/templates/base-xyno.html
@@ -50,7 +50,7 @@
   <aside class="main-sidebar sidebar-dark-primary elevation-4">
     <!-- Brand Logo -->
     <a href="#" class="brand-link">
-      <img src="https://shop.pureseed.in/static/media/logo.a13da29e0076c16ed226.png" alt="pureseed" class="brand-image img-circle elevation-3" style="opacity: .8">
+      <img src="https://shop.pureseed.in/static/media/pureseed2.9db12c00886d521a674c.png" alt="pureseed" class="brand-image img-circle elevation-3" style="opacity: .8">
       <span class="brand-text font-weight-light">Pureseed Dashboard</span>
     </a>
 
